<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/action_friends"
            android:icon="@drawable/xml_contacts"
            android:title="@string/friends" />

        <item
            android:id="@+id/action_fav"
            android:icon="@drawable/xml_love"
            android:title="@string/favourite" />

        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/action_about_dev"
            android:icon="@drawable/ic_developer"
            android:title="@string/about_admin" />

        <item
            android:id="@+id/action_contact_dev"
            android:icon="@drawable/contact"
            android:title="@string/contact_admin" />

    </group>

    <item android:title="@string/social">
        <menu>
            <item
                android:id="@+id/action_youtube"
                android:icon="@drawable/ic_youtube"
                android:title="@string/youtube" />

            <item
                android:id="@+id/action_facebook"
                android:icon="@drawable/ic_facebook"
                android:title="@string/facebook" />

            <item
                android:id="@+id/action_twitter"
                android:icon="@drawable/ic_twitter"
                android:title="@string/twitter" />

        </menu>
    </item>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/action_about_report"
                android:icon="@drawable/xml_report"
                android:title="@string/report" />

            <item
                android:id="@+id/action_faq"
                android:icon="@drawable/faq"
                android:title="@string/faq" />
            <item
                android:id="@+id/privacy_policy"
                android:icon="@drawable/ic_privacy_policy"
                android:title="@string/privacy" />

            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />


            <item
                android:id="@+id/action_rate_app"
                android:icon="@drawable/ic_rating"
                android:title="@string/rate" />

            <item
                android:id="@+id/action_more_app"
                android:icon="@drawable/ic_bag"
                android:title="@string/more_app" />

            <item
                android:id="@+id/action_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
